--- a/index.html
+++ b/index.html
@@ -6,111 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        .dropbtn,
-        .dropbtn1 {
-            box-sizing: border-box;
-            height: 10%;
-            width: 10%;
-            position: fixed;
-            top: 50%;
-            margin-top: -100px;
-            margin-left: -200px;
-            background-color: #f1f1f1;
-            color: black;
-            padding: 0px;
-            font-size: 16px;
-            border: black;
-        }
-
-        .dropbtn {
-            left: 45%;
-        }
-
-        .dropbtn1 {
-            left: 80%;
-        }
-
-        .dropdown,
-        .dropdown1 {
-            box-sizing: border-box;
-            height: 10%;
-            width: 10%;
-            position: fixed;
-            top: 60%;
-            margin-top: -100px;
-            margin-left: -200px;
-            display: inline-block;
-        }
-
-        .dropdown {
-            left: 45%;
-        }
-
-        .dropdown1 {
-            left: 80%;
-        }
-
-        .dropdown-content,
-        .dropdown-content1 {
-            box-sizing: border-box;
-            overflow-x: hidden;
-            overflow-y: auto;
-            max-height: 500%;
-            display: none;
-            position: absolute;
-            background-color: #f1f1f1;
-            min-width: 160px;
-            box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-            z-index: 1;
-        }
-
-        .dropdown-content button,
-        .dropdown-content1 button {
-            box-sizing: border-box;
-            color: black;
-            width: 100%;
-            padding: 12px 16px;
-            text-decoration: none;
-            display: block;
-        }
-
-        .dropdown-content button:hover,
-        .dropdown-content1 button:hover {
-            background-color: #ddd;
-        }
-
-        .dropdown:hover .dropdown-content,
-        .dropdown1:hover .dropdown-content1 {
-            display: block;
-        }
-
-        .dropdown:hover .dropbtn,
-        .dropdown1:hover .dropbtn1 {
-            background-color: #3e8e41;
-        }
-
-        .entsprichtZeichen {
-            font-size: 500%;
-            position: fixed;
-            top: 50%;
-            left: 60%;
-            margin-top: -100px;
-            margin-left: -200px;
-        }
-
-        .submit,
-        .ausgangsWert {
-            box-sizing: border-box;
-            width: 200px;
-            padding: 20px;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css"></style>
 </head>
 
 <body>
     <div class="dropdown">
-        <button class="dropbtn" id="buttonAusgangseinheit">Ausgangseinheit</button>
+        <button class="dropbtn dropbtn-links" id="buttonAusgangseinheit">Ausgangseinheit</button>
         <div class="dropdown-content" id="dropbtn">
             <button onclick="setAusgangseinheit('kg')"> kg </button>
             <button onclick="setAusgangseinheit('g')"> g </button>
@@ -124,7 +25,7 @@
         </div>
     </div>
     <div class="dropdown1">
-        <button class="dropbtn1" id="buttonZieleinheit">Zieleinheit</button>
+        <button class="dropbtn dropbtn-rechts" id="buttonZieleinheit">Zieleinheit</button>
         <div class="dropdown-content1" id="dropbtn1">
             <button onclick="setZieleinheit('kg')"> kg </button>
             <button onclick="setZieleinheit('g')"> g </button>
