Umrechnen in natürliche Einheiten möglich

--- a/index.html
+++ b/index.html
@@ -16,12 +16,19 @@
             <button onclick="setAusgangseinheit('kg')"> kg </button>
             <button onclick="setAusgangseinheit('g')"> g </button>
             <button onclick="setAusgangseinheit('mg')"> mg </button>
-            <button onclick="setAusgangseinheit('mug')"> mug </button>
             <button onclick="setAusgangseinheit('ng')"> ng </button>
+            <button onclick="setAusgangseinheit('mug')"> mug </button>
             <button onclick="setAusgangseinheit('pg')"> pg </button>
             <button onclick="setAusgangseinheit('ag')"> ag </button>
             <button onclick="setAusgangseinheit('zg')"> zg </button>
             <button onclick="setAusgangseinheit('yg')"> yg </button>
+            <button onclick="setAusgangseinheit('s')"> s </button>
+            <button onclick="setAusgangseinheit('ps')"> ps </button>
+            <button onclick="setAusgangseinheit('as')"> as </button>
+            <button onclick="setAusgangseinheit('eV')"> eV </button>
+            <button onclick="setAusgangseinheit('GeV')"> KeV </button>
+            <button onclick="setAusgangseinheit('GeV')"> MeV </button>
+            <button onclick="setAusgangseinheit('GeV')"> GeV </button>
         </div>
     </div>
     <div class="dropdown1">
@@ -36,6 +43,13 @@
             <button onclick="setZieleinheit('ag')"> ag </button>
             <button onclick="setZieleinheit('zg')"> zg </button>
             <button onclick="setZieleinheit('yg')"> yg </button>
+            <button onclick="setZieleinheit('s')"> s </button>
+            <button onclick="setZieleinheit('ps')"> ps </button>
+            <button onclick="setZieleinheit('as')"> as </button>
+            <button onclick="setZieleinheit('eV')"> eV </button>
+            <button onclick="setZieleinheit('GeV')"> KeV </button>
+            <button onclick="setZieleinheit('GeV')"> MeV </button>
+            <button onclick="setZieleinheit('GeV')"> GeV </button>
         </div>
     </div>
     <div class="entsprichtZeichen">
