dropdown menü über buttons

--- a/index.html
+++ b/index.html
@@ -11,39 +11,8 @@
 </head>
 
 <body>
-    <div class="dropdown">
-        <button class="dropbtn dropbtn-links" id="buttonAusgangseinheit">Ausgangseinheit</button>
-        <div class="dropdown-content" id="dropbtn">
-            <button onclick="setAusgangseinheit('kg')"> kg </button>
-            <button onclick="setAusgangseinheit('g')"> g </button>
-            <button onclick="setAusgangseinheit('mg')"> mg </button>
-            <button onclick="setAusgangseinheit('ng')"> ng </button>
-            <button onclick="setAusgangseinheit('mug')"> mug </button>
-            <button onclick="setAusgangseinheit('pg')"> pg </button>
-            <button onclick="setAusgangseinheit('ag')"> ag </button>
-            <button onclick="setAusgangseinheit('zg')"> zg </button>
-            <button onclick="setAusgangseinheit('yg')"> yg </button>
-
-            <button onclick="setAusgangseinheit('s')"> s </button>
-            <button onclick="setAusgangseinheit('ps')"> ps </button>
-            <button onclick="setAusgangseinheit('as')"> as </button>
-
-            <button onclick="setAusgangseinheit('eV')"> eV </button>
-            <button onclick="setAusgangseinheit('GeV')"> keV </button>
-            <button onclick="setAusgangseinheit('GeV')"> MeV </button>
-            <button onclick="setAusgangseinheit('GeV')"> GeV </button>
-
-            <button onclick="setAusgangseinheit('m')"> m </button>
-
-            <button onclick="setAusgangseinheit('K')"> K </button>
-
-            <button onclick="setAusgangseinheit('kgMalmPros')"> kg ⋅ m/s </button>
-
-            <button onclick="setAusgangseinheit('mPros')"> m/s </button>
-        </div>
-    </div>
     <div class="dropdown1">
-        <button class="dropbtn dropbtn-rechts" id="buttonZieleinheit">Zieleinheit</button>
+        <button class="dropbtn dropbtn-ziel" id="buttonZieleinheit">Zieleinheit</button>
         <div class="dropdown-content1" id="dropbtn1">
             <button onclick="setZieleinheit('kg')"> kg </button>
             <button onclick="setZieleinheit('g')"> g </button>
@@ -73,6 +42,38 @@
             <button onclick="setZieleinheit('mPros')"> m/s </button>
         </div>
     </div>
+    <div class="dropdown">
+        <button class="dropbtn dropbtn-start" id="buttonAusgangseinheit">Ausgangseinheit</button>
+        <div class="dropdown-content" id="dropbtn">
+            <button onclick="setAusgangseinheit('kg')"> kg </button>
+            <button onclick="setAusgangseinheit('g')"> g </button>
+            <button onclick="setAusgangseinheit('mg')"> mg </button>
+            <button onclick="setAusgangseinheit('ng')"> ng </button>
+            <button onclick="setAusgangseinheit('mug')"> mug </button>
+            <button onclick="setAusgangseinheit('pg')"> pg </button>
+            <button onclick="setAusgangseinheit('ag')"> ag </button>
+            <button onclick="setAusgangseinheit('zg')"> zg </button>
+            <button onclick="setAusgangseinheit('yg')"> yg </button>
+
+            <button onclick="setAusgangseinheit('s')"> s </button>
+            <button onclick="setAusgangseinheit('ps')"> ps </button>
+            <button onclick="setAusgangseinheit('as')"> as </button>
+
+            <button onclick="setAusgangseinheit('eV')"> eV </button>
+            <button onclick="setAusgangseinheit('GeV')"> keV </button>
+            <button onclick="setAusgangseinheit('GeV')"> MeV </button>
+            <button onclick="setAusgangseinheit('GeV')"> GeV </button>
+
+            <button onclick="setAusgangseinheit('m')"> m </button>
+
+            <button onclick="setAusgangseinheit('K')"> K </button>
+
+            <button onclick="setAusgangseinheit('kgMalmPros')"> kg ⋅ m/s </button>
+
+            <button onclick="setAusgangseinheit('mPros')"> m/s </button>
+        </div>
+    </div>
+    
     <div class="entsprichtZeichen">
         ≙
     </div>
