--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
             <option value="K" > K </option>
             <option value="kgMalmPros" > kg ⋅ m/s </option>
             <option value="mPros" > m/s </option>
+            <option value="C" > C </option>
 
         </select>
     </form>
@@ -76,6 +77,7 @@
             <button onclick="setAusgangseinheit('kgMalmPros')"> kg ⋅ m/s </button>
 
             <button onclick="setAusgangseinheit('mPros')"> m/s </button>
+            <button onclick="setAusgangseinheit('C')"> C </button>
         </div>
     </div>
 
