--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <option value="C" > C </option>
         </select>
         <select class="dropdown" id="dropdownStart" disabled>
-            <option value=""> Zieleinheit </option>
+            <option value=""> Ausgangseinheit </option>
             <option value="kg"> kg </option>
             <option value="g" > g </option>
             <option value="mg" > mg </option>
