--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Document</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css"></style>
+    <link rel="stylesheet" href="tooltip.css"></style>
+
 </head>
 
 <body>
@@ -16,9 +18,11 @@
     </div>
     <input type="submit" class="submit" onclick="verarbeiteSubmitClick()">
     <input type="number" step="any" class="ausgangsWert" placeholder="Ausgangswert" id="ausgangsWert">
-    <div class="endWertAusgaben" id="endWertAusgaben"> 
-        <p class = "endWertAusgabeWert" id="endWertAusgabeWert"> </p>
-        <p class = "endWertAusgabeKonstanten" id="endWertAusgabeKonstanten"> </p>
+    <div class="endWertAusgaben tooltip" id="endWertAusgaben"> 
+        <span class="tooltiptext" id="endWertAusgabeKonstanten">Tooltip text</span>
+
+     <p class = "endWertAusgabeWert" id="endWertAusgabeWert"> </p>
+
     </div>
     <select class="dropdownDimension" id="dropdownDimension" onchange="dimensionVeraendert()">
         <option value=""> Dimension </option>
