--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <input type="submit" class="submit" onclick="verarbeiteSubmitClick()">
     <input type="number" step="any" class="ausgangsWert" placeholder="Ausgangswert" id="ausgangsWert">
     <div class="endWertAusgaben tooltip" id="endWertAusgaben"> 
-        <span class="tooltiptext" id="endWertAusgabeKonstanten">Tooltip text</span>
+        <span class="tooltiptext" id="endWertAusgabeKonstanten" hidden></span>
 
      <p class = "endWertAusgabeWert" id="endWertAusgabeWert"> </p>
 
