--- a/index.html
+++ b/index.html
@@ -33,7 +33,16 @@
         <select class="dropdown1" id="dropdownZiel" disabled>
             <option value=""> Zieleinheit </option>
         </select>
-        
+    <script src="klassen/wert.js"> </script>  
+    <script src="konstanten.js"> </script> 
+    <script src="klassen/faktor.js"> </script> 
+    <script src="klassen/ergebnis.js"> </script> 
+    <script src="klassen/einheit.js"> </script> 
+    <script src="klassen/basisEinheit.js"> </script> 
+    <script src="klassen/unterEinheit.js"> </script> 
+    <script src="klassen/specialUnterEinheit.js"> </script> 
+    <script src="klassen/dimension.js"> </script> 
+    <script src="dimensionen.js"> </script> 
     <script src="index.js"> </script>
 </body>
 
